infrastructure/kubernetes/overlays/preprod/airbyte/http-route-airbyte.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: airbyte
  namespace: airbyte
spec:
  parentRefs:
    - name: preprod         
      namespace: networking            
  hostnames:
    - "airbyte.preprod.djepenodev.ink"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: airbyte-airbyte-server-svc
          namespace: airbyte
          port: 8001
